Analysis: made adaptive design this page on 3 sizes

--- a/src/analysis.html
+++ b/src/analysis.html
@@ -29,8 +29,9 @@
 
         <div class="analysis-description container">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</div>
 
-        <!--<div class="analysis-modeling">
+        <div class="analysis-modeling">
             <div class="analysis-modeling-cont container">
+                <img class="analysis-modeling-img phone" src="./img/analysis/grafik-phone.png" alt="grafik-phone">
 
                 <div class="modeling-block-text">
                     <p class="analysis-modeling-title">Анализ</p>
@@ -39,135 +40,48 @@
 
                 <div class="modeling-block-block">
                     <div class="modeling-block-btns">
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn1 modeling-btn-text-start">Установление коммуникации с клиентом.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line1" width="73" height="58" viewBox="0 0 73 58" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M72.541 57.2S47.5 50.5 32.5 37C17.5 23.5 1 .5 1 .5" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse1" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn2 modeling-btn-text-start">Детальный анализ предметной области.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line2" width="116" height="27" viewBox="0 0 116 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M115.502 11.5c-49.5 24.5-74.5 15-114.5-10.332" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse2" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn3 modeling-btn-text-start">Разработка терминологического глоссария.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line3" width="132" height="43" viewBox="0 0 132 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M130.999 1c-18.999 48-90 49.782-130 24.45" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse3" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn4 modeling-btn-text-start">Речение задач по изучению, моделированию и оптимизации бизнес-процессов.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line4" width="95" height="96" viewBox="0 0 95 96" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M94.498 1C91.5 50.5 64 114.5.998 89.5" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse4" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <div class="modeling-btn-img">
-                                <img class="modeling-ellipse5" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                                <svg class="modeling-line5" width="90" height="157" viewBox="0 0 90 157" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M89 .5C86.004 50 79.502 188.999.5 148.499" stroke="#AED9EF"/>
-                                </svg>
-                            </div>
-                            <button class="modeling-btn modeling-btn5 modeling-btn-text-start">Определение, анализ и классификация заинтересованных лиц.</button>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <div class="modeling-btn-img">
-                                <img class="modeling-ellipse6" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                                <svg class="modeling-line6" width="66" height="193" viewBox="0 0 66 193" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M65.501.5C62.503 50 77.001 239 .501 181" stroke="#AED9EF"/>
-                                </svg>
-                            </div>
-                            <button class="modeling-btn modeling-btn6 modeling-btn-text-start">Создание модели, описывающей ключевых участников.</button>
-                        </div>
-
+                        <div class="modeling-btn modeling-btn1 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Установление коммуникации с клиентом.</div>
+                        <div class="modeling-btn modeling-btn2 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Детальный анализ предметной области.</div>
+                        <div class="modeling-btn modeling-btn3 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Разработка терминологического глоссария.</div>
+                        <div class="modeling-btn modeling-btn4 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Речение задач по изучению, моделированию и оптимизации бизнес-процессов.</div>
+                        <div class="modeling-btn modeling-btn5 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Определение, анализ и классификация заинтересованных лиц.</div>
+                        <div class="modeling-btn modeling-btn6 modeling-btn-text-start">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Создание модели, описывающей ключевых участников.</div>
                     </div>
-
-                    <div class="modeling-block-btn-center">
-                        <div class="modeling-btn-img">
-                            <svg class="modeling-line7" width="105" height="212" viewBox="0 0 105 212" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M103.907 1C100.909 50.5 101.499 272.5.5 194" stroke="#AED9EF"/>
-                            </svg>
-                            <img class="modeling-ellipse7" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                        </div>
-                        <button class="modeling-btn modeling-btn7">Выявление иерархии всех уровней и целей решаемой програмной задачи.</button>
-                    </div>
-
+                    <div class="modeling-btn modeling-btn7">
+                         <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                        Выявление иерархии всех уровней и целей решаемой програмной задачи.</div>
                     <div class="modeling-block-btns">
-                        <div class="modeling-block-btn">
-                            <div class="modeling-btn-img">
-                                <img class="modeling-ellipse8" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                                <svg class="modeling-line8" width="78" height="118" viewBox="0 0 78 118" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M.744 0C.742 38.5 14 145 77.5 109.5" stroke="#AED9EF"/>
-                                </svg>
-                            </div>
-                            <button class="modeling-btn modeling-btn8 modeling-btn-text-end">Разработка кратких сценариев для каждого программного сервиса решения.</button>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn9 modeling-btn-text-end">Отработка генеральной концепции программной среды (Vision).</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line9" width="104" height="86" viewBox="0 0 104 86" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1.409 0c-.001 38.5 38.59 111 102.089 75.5" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse9" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn10 modeling-btn-text-end">Решение задач, связанных с определением и согласованием границ разработки.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line10" width="99" height="60" viewBox="0 0 99 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M.878 0C.876 38.5 55.5 80.5 98 46" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse10" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn11 modeling-btn-text-end">Создание модели функциональных требований к пользователям системы.</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line11" width="106" height="49" viewBox="0 0 106 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1.438 1C22.002 40.5 70.5 59 105 40.5" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse11" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
-                        <div class="modeling-block-btn">
-                            <button class="modeling-btn modeling-btn12 modeling-btn-text-end">Подготовка спецификации требований разрабатываемого ПО (составление SRS).</button>
-                            <div class="modeling-btn-img">
-                                <svg class="modeling-line12" width="48" height="31" viewBox="0 0 48 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M.001 29.869c24.501 0 37.001-12.369 47.5-28.87" stroke="#AED9EF"/>
-                                </svg>
-                                <img class="modeling-ellipse12" src="@img/analysis/Ellipse-transparent.png" alt="ellipse-transparent">
-                            </div>
-                        </div>
-
+                        <div class="modeling-btn modeling-btn8 modeling-btn-text-end">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Подготовка спецификации требований разрабатываемого ПО (составление SRS).</div>
+                        <div class="modeling-btn modeling-btn9 modeling-btn-text-end">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Создание модели функциональных требований к пользователям системы.</div>
+                        <div class="modeling-btn modeling-btn10 modeling-btn-text-end">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Решение задач, связанных с определением и согласованием границ разработки.</div>
+                        <div class="modeling-btn modeling-btn11 modeling-btn-text-end">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Отработка генеральной концепции программной среды (Vision).</div>
+                        <div class="modeling-btn modeling-btn12 modeling-btn-text-end">
+                             <img class="page-list-img phone" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            Разработка кратких сценариев для каждого программного сервиса решения.</div>
                     </div>
-
                 </div>
             </div>
-        </div>-->
+        </div>
 
         <div class="analysis-useCase">
             <div class="analysis-useCase-cont container">
