--- a/src/crm-support.html
+++ b/src/crm-support.html
@@ -40,45 +40,71 @@
                         <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                         <p class="costs-item-header">От 4000 рублей/мес.</p>
                         <p class="costs-item-text">При заключении договора от 12 месяцев</p>
-                        <button class="costs-item-btn">Заказать
-                            <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </button>
+                        <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                     </div>
                     <div class="page-costs-item">
                         <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
                         <p class="costs-item-header">От 4500 рублей/мес.</p>
                         <p class="costs-item-text">При заключении договора от 6 месяцев</p>
-                        <button class="costs-item-btn">Заказать
-                            <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </button>
+                        <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                     </div>
                     <div class="page-costs-item">
                         <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
                         <p class="costs-item-header">От 5500 рублей/мес.</p>
                         <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
-                        <button class="costs-item-btn">Заказать
-                            <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </button>
+                        <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                     </div>
                     <div class="page-costs-item">
                         <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
                         <p class="costs-item-header">До 8000 рублей/мес.</p>
                         <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
-                        <button class="costs-item-btn">Заказать
-                            <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </button>
+                        <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                     </div>
                 </div>
             </div>
         </div>
+
+
+<!--        <div class="page-costs">-->
+<!--            <div class="page-costs-cont container">-->
+<!--                <p class="page-costs-header">Стоимость услуг</p>-->
+
+<!--                <div class="page-cost-slider page-costs-block">-->
+<!--                    <div class="page-cost-slider-inner swiper">-->
+<!--                        <div class="swiper-wrapper">-->
+
+<!--                            <div class="swiper-slide page-costs-item">-->
+<!--                                <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>-->
+<!--                                <p class="costs-item-header">От 4000 рублей/мес.</p>-->
+<!--                                <p class="costs-item-text">При заключении договора от 12 месяцев</p>-->
+<!--                                <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>-->
+<!--                            </div>-->
+<!--                            <div class="swiper-slide page-costs-item">-->
+<!--                                <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>-->
+<!--                                <p class="costs-item-header">От 4500 рублей/мес.</p>-->
+<!--                                <p class="costs-item-text">При заключении договора от 6 месяцев</p>-->
+<!--                                <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>-->
+<!--                            </div>-->
+<!--                            <div class="swiper-slide page-costs-item">-->
+<!--                                <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>-->
+<!--                                <p class="costs-item-header">От 5500 рублей/мес.</p>-->
+<!--                                <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>-->
+<!--                                <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>-->
+<!--                            </div>-->
+<!--                            <div class="swiper-slide page-costs-item">-->
+<!--                                <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>-->
+<!--                                <p class="costs-item-header">До 8000 рублей/мес.</p>-->
+<!--                                <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>-->
+<!--                                <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>-->
+<!--                            </div>-->
+
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+
 
 <!--        <div class="page-list-block">-->
 <!--            <p class="page-list-blueTitle">В список услуги входит:</p>-->
