--- a/src/support.html
+++ b/src/support.html
@@ -104,24 +104,25 @@
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                     <p class="costs-item-header">От 4000 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 12 месяцев</p>
-                    <button class="costs-item-btn">Заказать  &gt;</button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
                     <p class="costs-item-header">От 4500 рублей/мес.</p>
-                    <p class="costs-item-text">При заключении договора от 6 месяцев</p></button>
+                    <p class="costs-item-text">При заключении договора от 6 месяцев</p>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
                     <p class="costs-item-header">От 5500 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
-                    <button class="costs-item-btn">Заказать  &gt;</button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
                     <p class="costs-item-header">До 8000 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
-                    <button class="costs-item-btn">Заказать  &gt;</button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
             </div>
         </div>
