maintenance: made adaptive design

--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -28,7 +28,6 @@
 
         <p class="maintenance-description container">Наша компания оказывает услуги по техническому сопровождению и развитию порталов Битрикс24 и amoCRM любого уровня сложности, независимо от того, когда и кем он был внедрен и доработан. Наша компания предоставляет гибкие тарифы по сопровождению и технической поддержке порталов. Мы позаботимся о вашей системе! Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
 
-<!--        <div class="maintenance-content">-->
         <div class="maintenance-list">
             <div class="page-list-cont container">
                 <div class="page-list-block">
@@ -84,9 +83,9 @@
 
         <div class="support-care">
             <div class="support-care-cont container">
-                <div class="support-care-img">
-                    <img class="support-care-img-girl" src="img/support/girl-laptop.png" alt="girl-laptop"/>
-                    <img class="support-care-img-shadow" src="img/support/girl-shadow.png" alt="girl-laptop"/>
+                <div class="support-care-img desktop">
+                    <img class="support-care-img-girl desktop" src="img/support/girl-laptop.png" alt="girl-laptop"/>
+                    <img class="support-care-img-shadow desktop" src="img/support/girl-shadow.png" alt="girl-laptop"/>
                 </div>
                 <div class="support-care-block">
                     <p class="support-care-title">Мы позаботимся о вашей системе!</p>
@@ -95,9 +94,6 @@
                 </div>
             </div>
         </div>
-
-<!--        </div>-->
-
 
             <div class="page-pros-container container">
                 <p class="page-pros-title">Плюсы работы с нами</p>
@@ -146,41 +142,25 @@
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                     <p class="costs-item-header">От 4000 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 12 месяцев</p>
-                    <button class="costs-item-btn">Заказать
-                        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
                     <p class="costs-item-header">От 4500 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 6 месяцев</p>
-                    <button class="costs-item-btn">Заказать
-                        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
                     <p class="costs-item-header">От 5500 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
-                    <button class="costs-item-btn">Заказать
-                        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
                     <p class="costs-item-header">До 8000 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
-                    <button class="costs-item-btn">Заказать
-                        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
+                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
                 </div>
             </div>
         </div>
