--- a/src/support.html
+++ b/src/support.html
@@ -48,7 +48,7 @@
                     <p class="support-care-text">Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
                     <button class="support-care-btn">Заказать</button>
                 </div>
-                <div class="support-care-img">
+                <div class="support-care-img desktop">
                     <img class="support-care-img-girl desktop" src="img/support/girl-laptop.png" alt="girl-laptop"/>
                     <img class="support-care-img-shadow desktop" src="img/support/girl-shadow.png" alt="girl-laptop"/>
                 </div>
