SERVICES. add page services slider.

--- a/src/services-1C-integration.html
+++ b/src/services-1C-integration.html
@@ -7,7 +7,7 @@
 <body>
 @@include('html/all-pages/header.html',{})
 <main>
-    <section class="services">
+<!--    <section class="services">
         <div class="services-inner">
             <div class="services-wrapper">
                 <div class="page-breadcrumbs">
@@ -120,7 +120,7 @@
 
         </div>
 
-    </section>
+    </section>-->
 
 
     <section class="prefooter">
