--- a/src/support.html
+++ b/src/support.html
@@ -99,30 +99,44 @@
 
         <div class="page-costs container">
             <p class="page-costs-header">Стоимость услуг</p>
-            <div class="page-costs-block">
-                <div class="page-costs-item">
-                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
-                    <p class="costs-item-header">От 4000 рублей/мес.</p>
-                    <p class="costs-item-text">При заключении договора от 12 месяцев</p>
-                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
-                </div>
-                <div class="page-costs-item">
-                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
-                    <p class="costs-item-header">От 4500 рублей/мес.</p>
-                    <p class="costs-item-text">При заключении договора от 6 месяцев</p>
-                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
-                </div>
-                <div class="page-costs-item">
-                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
-                    <p class="costs-item-header">От 5500 рублей/мес.</p>
-                    <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
-                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
-                </div>
-                <div class="page-costs-item">
-                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
-                    <p class="costs-item-header">До 8000 рублей/мес.</p>
-                    <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
-                    <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span></button>
+            <div class="page-costs-block swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="page-costs-item">
+                            <img alt="wallet1" class="costs-item-img" src="@img/icons/icons.svg#wallet1"/>
+                            <p class="costs-item-header">От 4000 рублей/мес.</p>
+                            <p class="costs-item-text">При заключении договора от 12 месяцев</p>
+                            <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="page-costs-item">
+                            <img alt="wallet2" class="costs-item-img" src="@img/icons/icons.svg#wallet2"/>
+                            <p class="costs-item-header">От 4500 рублей/мес.</p>
+                            <p class="costs-item-text">При заключении договора от 6 месяцев</p>
+                            <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="page-costs-item">
+                            <img alt="wallet3" class="costs-item-img" src="@img/icons/icons.svg#wallet3"/>
+                            <p class="costs-item-header">От 5500 рублей/мес.</p>
+                            <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
+                            <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="page-costs-item">
+                            <img alt="wallet4" class="costs-item-img" src="@img/icons/icons.svg#wallet4"/>
+                            <p class="costs-item-header">До 8000 рублей/мес.</p>
+                            <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
+                            <button class="costs-item-btn">Заказать<span class="costs-item-btnVector">  &gt;</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
