deleted in all styles files .container and added .container in style.scss. Blog: changed img numbers on numbers, changed with colums grid, deleted grid-rows = made adaptive design

--- a/src/blog.html
+++ b/src/blog.html
@@ -31,7 +31,7 @@
                 </div>
                 </a>
             </div>
-            <div class="blog-content-item content-item1-3">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -39,7 +39,7 @@
                      <p class="blog-content-data">1 августа 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item1-4">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -48,7 +48,7 @@
                 </div>
             </div>
 
-            <div class="blog-content-item content-item2-1">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/discount.png" alt="discount"/>
 
                 <div class="blog-content-label">
@@ -56,7 +56,7 @@
                     <p class="blog-content-data">30 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item2-2">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/tenchat.png" alt="tenchat"/>
 
                 <div class="blog-content-label">
@@ -64,7 +64,7 @@
                     <p class="blog-content-data">29 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item2-3">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
 
                 <div class="blog-content-label">
@@ -72,7 +72,7 @@
                     <p class="blog-content-data">28 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item2-4">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
 
                 <div class="blog-content-label">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="blog-content-item content-item3-1">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -89,7 +89,7 @@
                     <p class="blog-content-data">1 августа 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item3-2">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -97,7 +97,7 @@
                     <p class="blog-content-data">1 августа 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item3-3">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -105,7 +105,7 @@
                     <p class="blog-content-data">1 августа 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item3-4">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
 
                 <div class="blog-content-label">
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="blog-content-item content-item4-1">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/discount.png" alt="discount"/>
 
                 <div class="blog-content-label">
@@ -122,7 +122,7 @@
                     <p class="blog-content-data">30 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item4-2">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/tenchat.png" alt="tenchat"/>
 
                 <div class="blog-content-label">
@@ -130,7 +130,7 @@
                     <p class="blog-content-data">29 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item4-3">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
 
                 <div class="blog-content-label">
@@ -138,7 +138,7 @@
                     <p class="blog-content-data">28 июля 2022</p>
                 </div>
             </div>
-            <div class="blog-content-item content-item4-4">
+            <div class="blog-content-item">
                 <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
 
                 <div class="blog-content-label">
@@ -150,17 +150,18 @@
 
 
         <button class="page-showMore">
-            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shape"/>
+            <p class="page-showMore-arrow">&lt;</p>
+<!--            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shape"/>-->
         </button>
 
         <div class="blog-pagination">
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination1" alt="pagination1"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination2" alt="pagination2"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination3" alt="pagination3"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination4" alt="pagination4"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination5" alt="pagination5"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination6" alt="pagination6"/>
-            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination30" alt="pagination30"/>
+            <div class="blog-pagination-number">1</div>
+            <div class="blog-pagination-number">2</div>
+            <div class="blog-pagination-number">3</div>
+            <div class="blog-pagination-number">4</div>
+            <div class="blog-pagination-number">5</div>
+            <div class="blog-pagination-number">...</div>
+            <div class="blog-pagination-number">30</div>
         </div>
 
     </section>
