--- a/src/contacts.html
+++ b/src/contacts.html
@@ -12,17 +12,19 @@
 <main>
     <section class="contacts">
 
+        @@include('html/all-pages/breadcrumps.html',{
+        "pageSectionLink": "",
+        "pageSectionName": "",
+        "pageCurrentName": "Контакты",
+        })
+
+        <div class="page-title-block">
+            <p class="page-title container">Контакты</p>
+        </div>
+
         <div class="contacts-block container">
             <div class="contacts-block-cont">
-
-                @@include('html/all-pages/breadcrumps.html',{
-                "pageSectionLink": "",
-                "pageSectionName": "",
-                "pageCurrentName": "Контакты",
-                })
-
                 <div class="contacts-main">
-                    <p class="page-title">Контакты</p>
                     <div class="contacts-main-tools">
 
                         <div class="main-tools-item">
@@ -91,56 +93,60 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="contacts-block-form">
-                <div class="contacts-form">
-                    <p class="contacts-form-text">Есть что сказать или появились вопросы?</p>
-                    <p class="contacts-form-title">Пишите нам!</p>
+        <div class="contacts-block-form desktop">
+            <div class="contacts-form">
+                <p class="contacts-form-text">Есть что сказать или появились вопросы?</p>
+                <p class="contacts-form-title">Пишите нам!</p>
 
-                    <div class="contacts-form-form">
-                        <div class="contacts-form-block">
-                            <label class="contacts-form-label">
-                                Ваше имя
-                                <input class="contacts-form-input" type="text"/>
-                            </label>
-                        </div>
-                        <div class="contacts-form-block">
-                            <label class="contacts-form-label">
-                                Как вам ответить?
-                                <input class="contacts-form-input" type="" placeholder="Телефонный звонок"/>
-                            </label>
-                        </div>
-                        <div class="contacts-form-block">
-                            <label class="contacts-form-label">
-                                Контакт
-                                <input class="contacts-form-input" type="text"/>
-                            </label>
-                        </div>
-                        <div class="contacts-form-block">
-                            <label class="contacts-form-label">
-                                Сообщение
-                                <input class="contacts-form-inputMessage" type="text"/>
-                            </label>
-                        </div>
-
-                        <div class="contacts-form-data">
-                            <input class="contacts-form-checkbox" type="checkbox"/>
-<!--                            <span class="contacts-form-checkbox">&#10004;</span>-->
-                            <p class="contacts-form-text-data">Нажимая кнопку «Отправить», я принимаю соглашение сайта <a class="contacts-form-textLine" href="#">об обработке персональных данных.</a></p>
-                        </div>
+                <div class="contacts-form-form">
+                    <div class="contacts-form-block">
+                        <label class="contacts-form-label">
+                            Ваше имя
+                            <input class="contacts-form-input" type="text"/>
+                        </label>
+                    </div>
+                    <div class="contacts-form-block">
+                        <label class="contacts-form-label">
+                            Как вам ответить?
+                            <input class="contacts-form-input" type="" placeholder="Телефонный звонок"/>
+                        </label>
+                    </div>
+                    <div class="contacts-form-block">
+                        <label class="contacts-form-label">
+                            Контакт
+                            <input class="contacts-form-input" type="text"/>
+                        </label>
+                    </div>
+                    <div class="contacts-form-block">
+                        <label class="contacts-form-label">
+                            Сообщение
+                            <input class="contacts-form-inputMessage" type="text"/>
+                        </label>
                     </div>
 
-                    <button class="contacts-form-btn">
-                        <img class="contacts-form-img" src="@img/icons/icons.svg#pencil" alt="shape"/>
-                        Отправить
-                    </button>
-
-                    <div class="contacts-form-secure">
-                        <img class="form-secure-img" src="@img/icons/icons.svg#checkmark" alt="shape1"/>
-                        <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
+                    <div class="contacts-form-data">
+                        <input class="contacts-form-checkbox" type="checkbox"/>
+                        <!--                            <span class="contacts-form-checkbox">&#10004;</span>-->
+                        <p class="contacts-form-text-data">Нажимая кнопку «Отправить», я принимаю соглашение сайта <a class="contacts-form-textLine" href="#">об обработке персональных данных.</a></p>
                     </div>
                 </div>
+
+                <button class="contacts-form-btn">
+                    <img class="contacts-form-img" src="@img/icons/icons.svg#pencil" alt="shape"/>
+                    Отправить
+                </button>
+
+                <div class="contacts-form-secure">
+                    <img class="form-secure-img" src="@img/icons/icons.svg#checkmark" alt="shape1"/>
+                    <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
+                </div>
             </div>
+        </div>
+
+        <div class="tablet">
+            @@include('html/home/prefooter.html',{})
         </div>
 
 
