Analysis: made more adaptive design. Optimization: made adaptive design. All pages: added border in hover backgraunds color

--- a/src/optimization.html
+++ b/src/optimization.html
@@ -20,27 +20,27 @@
         })
 
         <div class="optimization-container container">
-            <div>
+            <div class="desktop">
                 <aside class="optimization-nav-block">
                     <div class="optimization-nav">
                         <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text">«Оптимизировать карточку»: что это значит</span>
+                        <span class="optimization-nav-text"><a href="#whatIsIt">«Оптимизировать карточку»: что это значит</a></span>
                     </div>
                     <div class="optimization-nav">
                         <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text">Специальный алгоритм</span>
+                        <span class="optimization-nav-text"><a href="#algorithm">Специальный алгоритм</a></span>
                     </div>
                     <div class="optimization-nav">
                         <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text">Интент запроса</span>
+                        <span class="optimization-nav-text"><a href="#intent">Интент запроса</a></span>
                     </div>
                     <div class="optimization-nav">
                         <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text">Что дает грамотно оптимизированная карточка</span>
+                        <span class="optimization-nav-text"><a href="#whatDoes">Что дает грамотно оптимизированная карточка</a></span>
                     </div>
                     <div class="optimization-nav">
                         <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text">SEO-заполнение карточки товара</span>
+                        <span class="optimization-nav-text"><a href="#seo">SEO-заполнение карточки товара</a></span>
                     </div>
                 </aside>
 
@@ -48,9 +48,7 @@
                     <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
                     <p class="connection-block-title">Мы на связи</p>
                     <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
-                    <button class="connection-block-btn">Задать вопрос
-                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
-                    </button>
+                    <button class="connection-block-btn">Задать вопрос<span class="connection-block-btnVector">  &gt;</span></button>
                     <div class="connection-block-icons">
                         <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
                         <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
@@ -72,6 +70,7 @@
 
                 <div class="optimization-content-main">
 
+                    <a name="whatIsIt"></a>
                     <div class="content-main-optimization">
                         <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
                         <p class="main-optimization-title">«Оптимизировать карточку»: что это значит</p>
@@ -81,12 +80,14 @@
                     <p class="main-optimization-text">SEO (Search Engine Optimization) — это оптимизация контента под требования поисковых систем. Существует целый ряд параметров, по которым поисковик определяет качественный сайт с релевантной страницей, которую не грех вывести на первые строчки поисковой выдачи. Интернет-магазинам тоже необходимо SEO для привлечения трафика из поисковых систем и повышения качества пользовательского опыта.</p>
 
                     <div class="main-optimization-block">
+                        <a name="algorithm"></a>
                         <img class="optimization-miniLogo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
                         <p class="main-optimization-subtitle">Специальный алгоритм</p>
                     </div>
 
                     <p class="main-optimization-text">Чтобы понять, как работает SEO, нужно знать алгоритмы работы поисковиков. Когда пользователь хочет найти товар в интернете, он формулирует свой запрос и вводит его в поисковую строку Яндекса, Google или маркетплейса. Алгоритмы системы обрабатывают фразу и ищут в своей базе данных наиболее релевантный и качественный ответ. Свой анализ они проводят на основе ключевых слов, которые помогают роботам понять, что именно ищет пользователь и какой у его запроса интент.</p>
 
+                    <a name="intent"></a>
                     <div class="main-optimization-block">
                         <img class="optimization-miniLogo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
                         <p class="main-optimization-subtitle">Интент запроса</p>
@@ -97,6 +98,7 @@
                     <p class="main-optimization-text">Чем выше поисковик оценит качество и релевантность карточки товара, тем выше ее ранжирование. А пользователи охотнее переходят по ссылкам в первых строчках топа выдачи. Чтобы карточка выпадала в первой десятке, ее необходимо оптимизировать: подстроиться под требования поисковиков.</p>
                 </div>
 
+                <a name="whatDoes"></a>
                 <div class="optimization-content-main">
                     <div class="content-main-optimization">
                         <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
@@ -147,6 +149,7 @@
                     </div>
                 </div>
 
+                <a name="seo"></a>
                 <div class="optimization-content-main">
                     <div class="content-main-optimization">
                         <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
@@ -166,9 +169,7 @@
                     <p class="main-optimization-text">В оптимизации мета-тегов главное не переусердствовать с ключами.</p>
                 </div>
 
-                <button class="optimization-back">Вернуться назад
-                    <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
-                </button>
+                <button class="optimization-back">Вернуться назад <span class="optimization-back-btnVector">  &gt;</span></button>
             </div>
         </div>
 
