Integrations: made adaptive design in this page

--- a/src/integrations.html
+++ b/src/integrations.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="content-img-block">
-                    <img class="content-img" src="img/integrations/cube.png" alt="cube"/>
+                    <img class="content-img desktop" src="img/integrations/cube.png" alt="cube"/>
                 </div>
             </div>
         </div>
